--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
     "better-sqlite3": "^12.4.1",
+    "dotenv": "^17.2.3",
     "electron-updater": "^6.3.9",
     "lucide-react": "^0.544.0",
+    "openai": "^6.0.1",
     "slate": "^0.118.1",
     "slate-history": "^0.113.1",
     "slate-react": "^0.117.4"
