--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "electron-updater": "^6.3.9",
     "lucide-react": "^0.544.0",
     "openai": "^6.0.1",
+    "react-resizable-panels": "^3.0.6",
     "slate": "^0.118.1",
     "slate-history": "^0.113.1",
     "slate-react": "^0.117.4"
